// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#buildMemcacheInstancesUsesNetworkRelationships should collect data 1`] = `
{
  "collectedEntities": [
    {
      "CIDR": null,
      "IPv4Range": undefined,
      "_class": [
        "Network",
      ],
      "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/global/networks/default",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "autoCreateSubnetworks": true,
            "creationTimestamp": "2021-05-31T09:21:40.121-07:00",
            "description": "Default network for the project",
            "id": "3355945658528347131",
            "kind": "compute#network",
            "name": "default",
            "networkFirewallPolicyEnforcementOrder": "AFTER_CLASSIC_FIREWALL",
            "peerings": [
              {
                "autoCreateRoutes": true,
                "exchangeSubnetRoutes": true,
                "exportCustomRoutes": false,
                "exportSubnetRoutesWithPublicIp": false,
                "importCustomRoutes": false,
                "importSubnetRoutesWithPublicIp": false,
                "name": "servicenetworking-googleapis-com",
                "network": "https://www.googleapis.com/compute/v1/projects/vc085cf1742bb325ap-tp/global/networks/servicenetworking",
                "state": "ACTIVE",
                "stateDetails": "[2022-03-15T09:06:59.892-07:00]: Connected.",
              },
            ],
            "routingConfig": {
              "routingMode": "REGIONAL",
            },
            "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/global/networks/default",
            "selfLinkWithId": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/global/networks/3355945658528347131",
            "subnetworks": [
              "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/europe-north1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/europe-west4/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/us-east1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/us-west1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/europe-west8/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/us-east4/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/southamerica-west1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/europe-west9/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/asia-southeast2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/us-central1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/europe-west2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/asia-northeast2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/us-west4/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/europe-central2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/europe-west6/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/asia-northeast1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/us-west2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/asia-south2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/southamerica-east1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/asia-southeast1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/asia-south1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/us-east7/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/europe-west3/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/asia-east1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/australia-southeast2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/europe-west1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/australia-southeast1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/us-west3/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/northamerica-northeast1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/northamerica-northeast2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/asia-northeast3/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/asia-east2/subnetworks/default",
            ],
          },
        },
      ],
      "_type": "google_compute_network",
      "autoCreateSubnetworks": true,
      "createdOn": 1622478100121,
      "description": "Default network for the project",
      "displayName": "default",
      "gatewayIPv4": undefined,
      "id": "3355945658528347131",
      "internal": true,
      "name": "default",
      "public": false,
      "routingMode": "REGIONAL",
      "subnetworks": [
        "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/europe-north1/subnetworks/default",
        "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/europe-west4/subnetworks/default",
        "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/us-east1/subnetworks/default",
        "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/us-west1/subnetworks/default",
        "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/europe-west8/subnetworks/default",
        "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/us-east4/subnetworks/default",
        "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/southamerica-west1/subnetworks/default",
        "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/europe-west9/subnetworks/default",
        "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/asia-southeast2/subnetworks/default",
        "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/us-central1/subnetworks/default",
        "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/europe-west2/subnetworks/default",
        "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/asia-northeast2/subnetworks/default",
        "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/us-west4/subnetworks/default",
        "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/europe-central2/subnetworks/default",
        "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/europe-west6/subnetworks/default",
        "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/asia-northeast1/subnetworks/default",
        "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/us-west2/subnetworks/default",
        "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/asia-south2/subnetworks/default",
        "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/southamerica-east1/subnetworks/default",
        "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/asia-southeast1/subnetworks/default",
        "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/asia-south1/subnetworks/default",
        "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/us-east7/subnetworks/default",
        "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/europe-west3/subnetworks/default",
        "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/asia-east1/subnetworks/default",
        "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/australia-southeast2/subnetworks/default",
        "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/europe-west1/subnetworks/default",
        "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/australia-southeast1/subnetworks/default",
        "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/us-west3/subnetworks/default",
        "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/northamerica-northeast1/subnetworks/default",
        "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/northamerica-northeast2/subnetworks/default",
        "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/asia-northeast3/subnetworks/default",
        "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/asia-east2/subnetworks/default",
      ],
      "webLink": "https://console.cloud.google.com/networking/networks/details/default?project=j1-gc-integration-dev-v3",
    },
    {
      "CIDR": null,
      "IPv4Range": undefined,
      "_class": [
        "Network",
      ],
      "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/global/networks/public-compute-app-vpc",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "autoCreateSubnetworks": false,
            "creationTimestamp": "2021-05-31T09:25:43.742-07:00",
            "id": "7739872907028377832",
            "kind": "compute#network",
            "name": "public-compute-app-vpc",
            "networkFirewallPolicyEnforcementOrder": "AFTER_CLASSIC_FIREWALL",
            "peerings": [
              {
                "autoCreateRoutes": true,
                "exchangeSubnetRoutes": true,
                "exportCustomRoutes": false,
                "exportSubnetRoutesWithPublicIp": true,
                "importCustomRoutes": false,
                "importSubnetRoutesWithPublicIp": false,
                "name": "same-project-vpc-peering-activator",
                "network": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/global/networks/test-vpc-network",
                "state": "INACTIVE",
                "stateDetails": "[2021-07-02T11:37:04.253-07:00]: Peer network tried to connect and failed.",
              },
            ],
            "routingConfig": {
              "routingMode": "GLOBAL",
            },
            "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/global/networks/public-compute-app-vpc",
            "selfLinkWithId": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/global/networks/7739872907028377832",
            "subnetworks": [
              "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/us-central1/subnetworks/public-compute-app-public-subnet-1",
            ],
          },
        },
      ],
      "_type": "google_compute_network",
      "autoCreateSubnetworks": false,
      "createdOn": 1622478343742,
      "description": undefined,
      "displayName": "public-compute-app-vpc",
      "gatewayIPv4": undefined,
      "id": "7739872907028377832",
      "internal": true,
      "name": "public-compute-app-vpc",
      "public": false,
      "routingMode": "GLOBAL",
      "subnetworks": [
        "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/us-central1/subnetworks/public-compute-app-public-subnet-1",
      ],
      "webLink": "https://console.cloud.google.com/networking/networks/details/public-compute-app-vpc?project=j1-gc-integration-dev-v3",
    },
    {
      "CIDR": null,
      "IPv4Range": undefined,
      "_class": [
        "Network",
      ],
      "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/global/networks/rbs-net",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "autoCreateSubnetworks": false,
            "creationTimestamp": "2021-08-06T10:57:35.628-07:00",
            "id": "850726367629723360",
            "kind": "compute#network",
            "name": "rbs-net",
            "networkFirewallPolicyEnforcementOrder": "AFTER_CLASSIC_FIREWALL",
            "routingConfig": {
              "routingMode": "REGIONAL",
            },
            "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/global/networks/rbs-net",
            "selfLinkWithId": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/global/networks/850726367629723360",
            "subnetworks": [
              "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/us-central1/subnetworks/rbs-net-default",
            ],
          },
        },
      ],
      "_type": "google_compute_network",
      "autoCreateSubnetworks": false,
      "createdOn": 1628272655628,
      "description": undefined,
      "displayName": "rbs-net",
      "gatewayIPv4": undefined,
      "id": "850726367629723360",
      "internal": true,
      "name": "rbs-net",
      "public": false,
      "routingMode": "REGIONAL",
      "subnetworks": [
        "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/us-central1/subnetworks/rbs-net-default",
      ],
      "webLink": "https://console.cloud.google.com/networking/networks/details/rbs-net?project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "Database",
        "DataStore",
        "Cluster",
      ],
      "_key": "memcached:projects/j1-gc-integration-dev-v3/locations/us-central1/instances/memcached-instance-2",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "authorizedNetwork": "projects/j1-gc-integration-dev-v3/global/networks/default",
            "createTime": "2022-03-15T16:06:33.506758765Z",
            "discoveryEndpoint": "10.0.0.67:11211",
            "memcacheFullVersion": "memcached-1.5.16",
            "memcacheVersion": "MEMCACHE_1_5",
            "name": "projects/j1-gc-integration-dev-v3/locations/us-central1/instances/memcached-instance-2",
            "nodeConfig": {
              "cpuCount": 1,
              "memorySizeMb": 5120,
            },
            "nodeCount": 1,
            "parameters": {},
            "state": "READY",
            "updateTime": "2022-03-15T16:11:50.929963455Z",
            "zones": [
              "us-central1-a",
              "us-central1-b",
              "us-central1-c",
              "us-central1-f",
            ],
          },
        },
      ],
      "_type": "google_memcache_instance",
      "classification": null,
      "createdOn": 1647360393506,
      "discoveryEndpoint": "10.0.0.67:11211",
      "displayName": "projects/j1-gc-integration-dev-v3/locations/us-central1/instances/memcached-instance-2",
      "encrypted": null,
      "hostname": null,
      "memcacheFullVersion": "memcached-1.5.16",
      "memcacheVersion": "MEMCACHE_1_5",
      "name": "projects/j1-gc-integration-dev-v3/locations/us-central1/instances/memcached-instance-2",
      "nodeCount": 1,
      "nodeCpuCount": 1,
      "nodeMemorySizeMb": 5120,
      "state": "READY",
      "updatedOn": 1647360710929,
      "webLink": "https://console.cloud.google.com/memorystore/memcached/locations/us-central1/instances/memcached-instance-2/details?project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "Database",
        "DataStore",
        "Host",
      ],
      "_key": "projects/j1-gc-integration-dev-v3/locations/us-central1/instances/memcached-instance-2/node-c-1",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "host": "10.0.0.68",
            "nodeId": "node-c-1",
            "parameters": {},
            "port": 11211,
            "state": "READY",
            "zone": "us-central1-c",
          },
        },
      ],
      "_type": "google_memcache_instance_node",
      "classification": null,
      "createdOn": undefined,
      "displayName": "node-c-1",
      "encrypted": null,
      "host": "10.0.0.68",
      "hostname": null,
      "name": "node-c-1",
      "port": 11211,
      "state": "READY",
      "webLink": "https://console.cloud.google.com/memorystore/memcached/locations/us-central1/instances/memcached-instance-2/details?project=j1-gc-integration-dev-v3",
      "zone": "us-central1-c",
    },
    {
      "_class": [
        "Database",
        "DataStore",
        "Cluster",
      ],
      "_key": "memcached:projects/j1-gc-integration-dev-v3/locations/us-central1/instances/example-instance-id",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "authorizedNetwork": "projects/j1-gc-integration-dev-v3/global/networks/default",
            "createTime": "2022-03-15T16:01:32.122334322Z",
            "discoveryEndpoint": "10.0.0.3:11211",
            "memcacheFullVersion": "memcached-1.5.16",
            "memcacheVersion": "MEMCACHE_1_5",
            "name": "projects/j1-gc-integration-dev-v3/locations/us-central1/instances/example-instance-id",
            "nodeConfig": {
              "cpuCount": 1,
              "memorySizeMb": 1024,
            },
            "nodeCount": 1,
            "parameters": {},
            "state": "READY",
            "updateTime": "2022-03-15T16:06:45.191080532Z",
            "zones": [
              "us-central1-a",
              "us-central1-b",
              "us-central1-c",
              "us-central1-f",
            ],
          },
        },
      ],
      "_type": "google_memcache_instance",
      "classification": null,
      "createdOn": 1647360092122,
      "discoveryEndpoint": "10.0.0.3:11211",
      "displayName": "projects/j1-gc-integration-dev-v3/locations/us-central1/instances/example-instance-id",
      "encrypted": null,
      "hostname": null,
      "memcacheFullVersion": "memcached-1.5.16",
      "memcacheVersion": "MEMCACHE_1_5",
      "name": "projects/j1-gc-integration-dev-v3/locations/us-central1/instances/example-instance-id",
      "nodeCount": 1,
      "nodeCpuCount": 1,
      "nodeMemorySizeMb": 1024,
      "state": "READY",
      "updatedOn": 1647360405191,
      "webLink": "https://console.cloud.google.com/memorystore/memcached/locations/us-central1/instances/example-instance-id/details?project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "Database",
        "DataStore",
        "Host",
      ],
      "_key": "projects/j1-gc-integration-dev-v3/locations/us-central1/instances/example-instance-id/node-c-1",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "host": "10.0.0.4",
            "nodeId": "node-c-1",
            "parameters": {},
            "port": 11211,
            "state": "READY",
            "zone": "us-central1-c",
          },
        },
      ],
      "_type": "google_memcache_instance_node",
      "classification": null,
      "createdOn": undefined,
      "displayName": "node-c-1",
      "encrypted": null,
      "host": "10.0.0.4",
      "hostname": null,
      "name": "node-c-1",
      "port": 11211,
      "state": "READY",
      "webLink": "https://console.cloud.google.com/memorystore/memcached/locations/us-central1/instances/example-instance-id/details?project=j1-gc-integration-dev-v3",
      "zone": "us-central1-c",
    },
  ],
  "collectedRelationships": [
    {
      "_class": "HAS",
      "_fromEntityKey": "memcached:projects/j1-gc-integration-dev-v3/locations/us-central1/instances/memcached-instance-2",
      "_key": "memcached:projects/j1-gc-integration-dev-v3/locations/us-central1/instances/memcached-instance-2|has|projects/j1-gc-integration-dev-v3/locations/us-central1/instances/memcached-instance-2/node-c-1",
      "_toEntityKey": "projects/j1-gc-integration-dev-v3/locations/us-central1/instances/memcached-instance-2/node-c-1",
      "_type": "google_memcache_instance_has_node",
      "displayName": "HAS",
    },
    {
      "_class": "HAS",
      "_fromEntityKey": "memcached:projects/j1-gc-integration-dev-v3/locations/us-central1/instances/example-instance-id",
      "_key": "memcached:projects/j1-gc-integration-dev-v3/locations/us-central1/instances/example-instance-id|has|projects/j1-gc-integration-dev-v3/locations/us-central1/instances/example-instance-id/node-c-1",
      "_toEntityKey": "projects/j1-gc-integration-dev-v3/locations/us-central1/instances/example-instance-id/node-c-1",
      "_type": "google_memcache_instance_has_node",
      "displayName": "HAS",
    },
    {
      "_class": "USES",
      "_fromEntityKey": "memcached:projects/j1-gc-integration-dev-v3/locations/us-central1/instances/memcached-instance-2",
      "_key": "memcached:projects/j1-gc-integration-dev-v3/locations/us-central1/instances/memcached-instance-2|uses|https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/global/networks/default",
      "_toEntityKey": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/global/networks/default",
      "_type": "google_memcache_instance_uses_compute_network",
      "displayName": "USES",
    },
    {
      "_class": "USES",
      "_fromEntityKey": "memcached:projects/j1-gc-integration-dev-v3/locations/us-central1/instances/example-instance-id",
      "_key": "memcached:projects/j1-gc-integration-dev-v3/locations/us-central1/instances/example-instance-id|uses|https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/global/networks/default",
      "_toEntityKey": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/global/networks/default",
      "_type": "google_memcache_instance_uses_compute_network",
      "displayName": "USES",
    },
  ],
  "encounteredTypes": [
    "google_compute_network",
    "google_memcache_instance",
    "google_memcache_instance_node",
    "google_memcache_instance_has_node",
    "google_memcache_instance_uses_compute_network",
  ],
  "numCollectedEntities": 7,
  "numCollectedRelationships": 4,
}
`;

exports[`#fetchMemcacheInstances should collect data 1`] = `
{
  "collectedEntities": [
    {
      "_class": [
        "Database",
        "DataStore",
        "Cluster",
      ],
      "_key": "memcached:projects/j1-gc-integration-dev-v3/locations/us-central1/instances/memcached-instance-2",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "authorizedNetwork": "projects/j1-gc-integration-dev-v3/global/networks/default",
            "createTime": "2022-03-15T16:06:33.506758765Z",
            "discoveryEndpoint": "10.0.0.67:11211",
            "memcacheFullVersion": "memcached-1.5.16",
            "memcacheVersion": "MEMCACHE_1_5",
            "name": "projects/j1-gc-integration-dev-v3/locations/us-central1/instances/memcached-instance-2",
            "nodeConfig": {
              "cpuCount": 1,
              "memorySizeMb": 5120,
            },
            "nodeCount": 1,
            "parameters": {},
            "state": "READY",
            "updateTime": "2022-03-15T16:11:50.929963455Z",
            "zones": [
              "us-central1-a",
              "us-central1-b",
              "us-central1-c",
              "us-central1-f",
            ],
          },
        },
      ],
      "_type": "google_memcache_instance",
      "classification": null,
      "createdOn": 1647360393506,
      "discoveryEndpoint": "10.0.0.67:11211",
      "displayName": "projects/j1-gc-integration-dev-v3/locations/us-central1/instances/memcached-instance-2",
      "encrypted": null,
      "hostname": null,
      "memcacheFullVersion": "memcached-1.5.16",
      "memcacheVersion": "MEMCACHE_1_5",
      "name": "projects/j1-gc-integration-dev-v3/locations/us-central1/instances/memcached-instance-2",
      "nodeCount": 1,
      "nodeCpuCount": 1,
      "nodeMemorySizeMb": 5120,
      "state": "READY",
      "updatedOn": 1647360710929,
      "webLink": "https://console.cloud.google.com/memorystore/memcached/locations/us-central1/instances/memcached-instance-2/details?project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "Database",
        "DataStore",
        "Host",
      ],
      "_key": "projects/j1-gc-integration-dev-v3/locations/us-central1/instances/memcached-instance-2/node-c-1",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "host": "10.0.0.68",
            "nodeId": "node-c-1",
            "parameters": {},
            "port": 11211,
            "state": "READY",
            "zone": "us-central1-c",
          },
        },
      ],
      "_type": "google_memcache_instance_node",
      "classification": null,
      "createdOn": undefined,
      "displayName": "node-c-1",
      "encrypted": null,
      "host": "10.0.0.68",
      "hostname": null,
      "name": "node-c-1",
      "port": 11211,
      "state": "READY",
      "webLink": "https://console.cloud.google.com/memorystore/memcached/locations/us-central1/instances/memcached-instance-2/details?project=j1-gc-integration-dev-v3",
      "zone": "us-central1-c",
    },
    {
      "_class": [
        "Database",
        "DataStore",
        "Cluster",
      ],
      "_key": "memcached:projects/j1-gc-integration-dev-v3/locations/us-central1/instances/example-instance-id",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "authorizedNetwork": "projects/j1-gc-integration-dev-v3/global/networks/default",
            "createTime": "2022-03-15T16:01:32.122334322Z",
            "discoveryEndpoint": "10.0.0.3:11211",
            "memcacheFullVersion": "memcached-1.5.16",
            "memcacheVersion": "MEMCACHE_1_5",
            "name": "projects/j1-gc-integration-dev-v3/locations/us-central1/instances/example-instance-id",
            "nodeConfig": {
              "cpuCount": 1,
              "memorySizeMb": 1024,
            },
            "nodeCount": 1,
            "parameters": {},
            "state": "READY",
            "updateTime": "2022-03-15T16:06:45.191080532Z",
            "zones": [
              "us-central1-a",
              "us-central1-b",
              "us-central1-c",
              "us-central1-f",
            ],
          },
        },
      ],
      "_type": "google_memcache_instance",
      "classification": null,
      "createdOn": 1647360092122,
      "discoveryEndpoint": "10.0.0.3:11211",
      "displayName": "projects/j1-gc-integration-dev-v3/locations/us-central1/instances/example-instance-id",
      "encrypted": null,
      "hostname": null,
      "memcacheFullVersion": "memcached-1.5.16",
      "memcacheVersion": "MEMCACHE_1_5",
      "name": "projects/j1-gc-integration-dev-v3/locations/us-central1/instances/example-instance-id",
      "nodeCount": 1,
      "nodeCpuCount": 1,
      "nodeMemorySizeMb": 1024,
      "state": "READY",
      "updatedOn": 1647360405191,
      "webLink": "https://console.cloud.google.com/memorystore/memcached/locations/us-central1/instances/example-instance-id/details?project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "Database",
        "DataStore",
        "Host",
      ],
      "_key": "projects/j1-gc-integration-dev-v3/locations/us-central1/instances/example-instance-id/node-c-1",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "host": "10.0.0.4",
            "nodeId": "node-c-1",
            "parameters": {},
            "port": 11211,
            "state": "READY",
            "zone": "us-central1-c",
          },
        },
      ],
      "_type": "google_memcache_instance_node",
      "classification": null,
      "createdOn": undefined,
      "displayName": "node-c-1",
      "encrypted": null,
      "host": "10.0.0.4",
      "hostname": null,
      "name": "node-c-1",
      "port": 11211,
      "state": "READY",
      "webLink": "https://console.cloud.google.com/memorystore/memcached/locations/us-central1/instances/example-instance-id/details?project=j1-gc-integration-dev-v3",
      "zone": "us-central1-c",
    },
  ],
  "collectedRelationships": [
    {
      "_class": "HAS",
      "_fromEntityKey": "memcached:projects/j1-gc-integration-dev-v3/locations/us-central1/instances/memcached-instance-2",
      "_key": "memcached:projects/j1-gc-integration-dev-v3/locations/us-central1/instances/memcached-instance-2|has|projects/j1-gc-integration-dev-v3/locations/us-central1/instances/memcached-instance-2/node-c-1",
      "_toEntityKey": "projects/j1-gc-integration-dev-v3/locations/us-central1/instances/memcached-instance-2/node-c-1",
      "_type": "google_memcache_instance_has_node",
      "displayName": "HAS",
    },
    {
      "_class": "HAS",
      "_fromEntityKey": "memcached:projects/j1-gc-integration-dev-v3/locations/us-central1/instances/example-instance-id",
      "_key": "memcached:projects/j1-gc-integration-dev-v3/locations/us-central1/instances/example-instance-id|has|projects/j1-gc-integration-dev-v3/locations/us-central1/instances/example-instance-id/node-c-1",
      "_toEntityKey": "projects/j1-gc-integration-dev-v3/locations/us-central1/instances/example-instance-id/node-c-1",
      "_type": "google_memcache_instance_has_node",
      "displayName": "HAS",
    },
  ],
  "encounteredTypes": [
    "google_memcache_instance",
    "google_memcache_instance_node",
    "google_memcache_instance_has_node",
  ],
  "numCollectedEntities": 4,
  "numCollectedRelationships": 2,
}
`;
